fix: wrapper class overflow conflicting with divi compatibility [closes #838]

--- a/assets/scss/elements/_page.scss
+++ b/assets/scss/elements/_page.scss
@@ -2,7 +2,10 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  overflow: hidden;
+}
+
+body > .wrapper:not(.et-fb-iframe-ancestor) {
+	overflow: hidden;
 }
 
 .neve-main {
